--- a/app/src/main/res/layout/item_charity.xml
+++ b/app/src/main/res/layout/item_charity.xml
@@ -8,19 +8,24 @@
     android:layout_margin="8dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginVertical="6dp"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="5dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/baseline_image_24" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvCharityName"
@@ -28,37 +33,21 @@
                 android:layout_height="wrap_content"
                 android:text="@string/TvCharity_name"
                 android:textColor="@color/dark_blue"
-                android:layout_marginStart="8dp"
-                android:textSize="20dp"
+                android:textSize="@dimen/txt20"
                 android:textStyle="bold"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/ivImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_image_24" />
-
+                android:layout_margin="5dp"/>
 
             <TextView
                 android:id="@+id/tvDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/TvCharity_description"
-                android:textColor="@color/black"
-                android:layout_marginStart="8dp"
-                android:textSize="15dp"
-                />
+                android:textColor="@color/dark_blue"
+                android:textSize="@dimen/txt12"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:textStyle="italic"/>
 
         </LinearLayout>
 
