--- a/app/src/main/res/layout/fragment_add_payment_method.xml
+++ b/app/src/main/res/layout/fragment_add_payment_method.xml
@@ -121,7 +121,7 @@
                     android:paddingStart="10dp"
                     android:background="@drawable/user_edittext"
                     android:drawablePadding="8dp"
-                    android:hint="EXP Date"
+                    android:hint="@string/Tvexp"
                     android:inputType="textEmailAddress"
                     android:padding="8dp"
                     android:textColor="@color/light_blue"
