--- a/app/src/main/res/layout/activity_update_charity.xml
+++ b/app/src/main/res/layout/activity_update_charity.xml
@@ -37,7 +37,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="597dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
         android:background="#CADCF1"
         android:orientation="vertical"
@@ -145,6 +146,16 @@
             android:padding="8dp"
             android:textColor="@color/black"
             android:textColorHighlight="@color/black" />
+
+        <Button
+            android:id="@+id/btnPickImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/light_blue"
+            android:text="@string/PickImageBtn"
+            android:textSize="14sp" />
 
         <TextView
             android:layout_width="wrap_content"
