--- a/app/src/main/res/layout/activity_update_post.xml
+++ b/app/src/main/res/layout/activity_update_post.xml
@@ -89,6 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
+            android:backgroundTint="@color/light_blue"
             android:text="@string/PickImageBtn"
             android:textSize="14sp" />
 
