--- a/app/src/main/res/layout/item_payment.xml
+++ b/app/src/main/res/layout/item_payment.xml
@@ -6,99 +6,110 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
-    android:layout_margin="16dp">
+    android:layout_margin="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
+        android:orientation="horizontal"
+        android:padding="@dimen/txt20">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginVertical="6dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tvLabelCardNo"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
-
-
-
+                android:layout_weight="1"
+                android:text="@string/tvLabelCardNo"
+                android:textColor="@color/dark_blue"
+                android:textSize="@dimen/txt12"
+                android:textStyle="bold" />
                 <TextView
                     android:id="@+id/tvCardNo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/Tvcard_no"
                     android:textColor="@color/dark_blue"
-                    android:layout_marginStart="8dp"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    />
-
-
-            </LinearLayout>
+                    android:textSize="@dimen/txt20"
+                    android:layout_weight="1"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvLabelExpdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tvLabelExp"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/txt12"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/tvExpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="EXP"
-                    android:textColor="@color/black"
-                    android:layout_marginStart="8dp"
-                    android:textSize="15dp"
-                    />
-
-
+                    android:layout_weight="1"
+                    android:text="@string/tvLabelExp"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/txt20" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tvCVV"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/Tvcvv"
-                android:textColor="@color/black"
-                android:layout_marginStart="8dp"
-                android:textSize="15dp"
-                />
+                android:orientation="horizontal">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/tvLabelCVV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/Tvcvv"
+                        android:textColor="@color/dark_blue"
+                        android:textSize="@dimen/txt12"
+                        android:textStyle="bold"
+                        android:layout_weight="1"/>
 
+                    <TextView
+                        android:id="@+id/tvCVV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/Tvcvv"
+                        android:textColor="@color/dark_blue"
+                        android:textSize="@dimen/txt20"
+                        android:layout_weight="1"/>
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/deleteBtn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="5dp"
+                    app:srcCompat="@drawable/delete_icon" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/deleteBtn"
-                android:layout_width="82dp"
-                android:layout_height="76dp"
-                android:layout_marginEnd="5dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/delete_icon" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
-
-
-
 
 
 </androidx.cardview.widget.CardView>
