--- a/app/src/main/res/layout/activity_add_charity.xml
+++ b/app/src/main/res/layout/activity_add_charity.xml
@@ -10,7 +10,11 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:src="@drawable/header_shape">
+        android:src="@drawable/header_shape"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
     </ImageView>
 
