--- a/app/src/main/res/layout/fragment_charity_view_user.xml
+++ b/app/src/main/res/layout/fragment_charity_view_user.xml
@@ -32,7 +32,7 @@
             android:src="@drawable/imgapplogo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></ImageView>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvCharityName"
@@ -104,6 +104,35 @@
                         android:text="@string/TvCharity_description"
                         android:textColor="@color/black"
                         android:textSize="@dimen/txt12" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvEmail"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:layout_below="@id/ivImage"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="8dp"
+                            android:text="@string/EmailTv"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/txt12" />
+                        <TextView
+                            android:id="@+id/tvPhoneNo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:layout_below="@id/ivImage"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="8dp"
+                            android:text="@string/Tvcontact_number"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/txt12" />
+                    </LinearLayout>
 
             </LinearLayout>
 
